# keychain

./: .flake8  .gitignore  .pre-commit-config.yaml  README.org  pyproject.toml  template.yaml  tox.ini
.github/workflows/: build-and-deploy.yaml  build-and-deploy.yml  code-quality.yml  pipeline.yaml.example
handlers/: service.py  services.py
src/keychain/adapters/: key.py  messages.py
src/keychain/components/: __init__.py  dynamodb.py  telegram.py
src/keychain/contracts/in/: aws.py
src/keychain/contracts/inputs/: aws.py  telegram.py
src/keychain/contracts/output/: aws.py
src/keychain/contracts/outputs/: aws.py  telegram.py
src/keychain/controllers/: key.py  messages.py  telegram.py
src/keychain/logic/: aws.py
src/keychain/models/: components.py  keychain.py  messages.py  telegram.py
src/keychain/ports/: http_inputs.py  http_outputs.py
src/keychain/protocols/: db.py
tests/integration/: test_webhook.py
tests/integration/aux/: requests.py  strategies.py
tests/integration/keychain/: test_webhook.py
tests/unit/keychain/: dummy_test.py
tests/unit/keychain/adapters/: messages_test.py
tests/unit/keychain/logic/: aws_test.py
tests/unit/keychain/models/: telegram_test.py
