[tool.poetry]
name = "keychain"
version = "0.1.0"
description = "A quick storage for all your passwords"
authors = ["Erick Isos <erickisos653@gmail.com>"]
license = "GPLv3"
packages = [
    { include = "keychain", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dataclasses"], version = "^2.7.1"}
requests = "^2.31.0"
aws-xray-sdk = "^2.13.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^24.4.2", allow-prereleases = true}
mypy = "^1.10"
pytest = "^8.2.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"
isort = "^5.13.2"
hypothesis = "^6.92.1"
pytest-cov = "^5.0.0"
codecov = "^2.1.12"
types-requests = "^2.31.0.5"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79
skip-string-normalization = true
target-version=['py39']
preview = true
exclude = '''
/(
    /.git
  | /.mypy_cache
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
