[project]
name = "keychain"
version = "0.1.0"
description = "A quick storage for all your passwords"
authors = [{ name = "Erick Isos", email = "erickisos653@gmail.com" }]
requires-python = ">=3.13.0,<4"
license = "GPL-3.0"
dependencies = [
    "pydantic>=2.11.7,<3",
    "requests>=2.32.5,<3",
    "aws-xray-sdk>=2.14.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "pre-commit>=3.8.0,<5",
    "hypothesis>=6.112.0,<7",
    "pytest-cov>=5.0.0,<8",
    "codecov>=2.1.12,<3",
    "types-requests>=2.31.0.5,<3",
    "requests-mock>=1.12.1,<2",
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
    "aws-sam-cli>=1.144.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/keychain"]

[tool.hatch.build.targets.wheel]
include = ["src/keychain"]

[tool.hatch.build.targets.wheel.sources]
"src/keychain" = "keychain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = 'py313'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F']
ignore = []

fixable = ['ALL']
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = 'double'
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'auto'

docstring-code-format = false
docstring-code-line-length = 'dynamic'

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
